# machine_rules

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  examples.py  langgraph_mcp_example.py  langraph_example.py  pyproject.toml  setup.cfg  simple_langraph_example.py
.github/workflows/: tests.yml
docs/: API.md  LESSONS_LEARNED.md
machine_rules/: __init__.py  __main__.py  mcp_server.py
machine_rules/adapters/: __init__.py  machine_adapter.py
machine_rules/api/: __init__.py  administrator.py  exceptions.py  execution_set.py  registry.py  runtime.py  session.py
machine_rules/loader/: __init__.py  dmn_loader.py  yaml_loader.py
machine_rules/schemas/: rule_schema.py
machine_rules/security/: __init__.py  safe_evaluator.py
machine_rules/tests/: __init__.py  test_api.py  test_core.py  test_integration.py  test_loaders.py  test_mcp_integration.py  test_mcp_server.py  test_security.py
